# instaxtractor

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
instaxtractor/: extract.py  extractor.py  main.py
instaxtractor/commands/: README.md  posts.py  reels.py
tests/: conftest.py  test_extrator.py  test_main.py  test_plugins.py  test_reels.py
tests/stubs/: test_1_minimal.har
